k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: energy-pred-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /predict
spec:
  rules:
    - http:
        paths:
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: energy-pred-srv
                port:
                  number: 80
